--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Kite Tv Home</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/kite-tv/kite-tv.github.io/main/styles.css">
     <link rel="stylesheet" href="quiz.css"> <!-- Add this line -->
 </head>
 <body>
