--- a/index.html
+++ b/index.html
@@ -7,7 +7,72 @@
 </head>
 <body>
     <!-- Existing content of the home page -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kite Tv Quiz Time</title>
+    <link rel="stylesheet" href="styles.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8272689330772081"
+     crossorigin="anonymous"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YFVCK09PKG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-YFVCK09PKG');
+</script>
+</head>
+<body>
+
+<header>
+    <h1 class="site-title">Kite Tv Quiz Time</h1>
+  
+    <nav>
+        <ul class="menu">
+            
+            <li><a href="https://YouTube.com/kitetvindia">YouTube</a></li>
+            <li><a href="https://twitter.com/kitetvindia">Twitter</a></li>
+            <li><a href="https://Facebook.com/kitetvindia">Facebook</a></li>
+            <li><a href="https://instagram.com/kitetvindia">Instagram</a></li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <section class="trending-quizzes">
+        <h2>Trending Quizzes</h2>
+        <p>Trending quizzes will be available here.</p>
+    </section>
+</main>
+
+<footer>
+  
+    <div class="footer-widget">
+        <h3>Social Media</h3>
+        <ul class="social-links">
+            <li><a href="https://Facebook.com/kitetvindia">Facebook</a></li>
+            <li><a href="https://twitter.com/kitetvindia">Twitter</a></li>     
+            <li><a href="https://instagram.com/kitetvindia">Instagram</a></li>
+            <li><a href="https://YouTube.com/kitetvindia">YouTube</a></li>
+           
+        </ul>
+        <h3>Sitemap</h3>
+        <ul class="social-links">
+        <li><a href="https://kite-tv.github.io">Home</a></li>
+        <li><a href="https://kite-tv.github.io/about-us">About Us</a></li></ul>
+    </div>
+    <div class="footer-widget">
+        <p>&copy; 2024 Kite TV Quiz Time. All rights reserved.</p>
+    </div>
+</footer>
+
+<script src="scripts.js"></script>
+</body>
+              </html>
+  
     <!-- Quiz HTML Structure -->
     <div class="quiz-container" id="quiz-content">
         <h1>Kite Tv Quiz Time</h1>
