--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kite Tv Quiz Time</title>
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/kite-tv/kite-tv.github.io/main/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="quiz.css"> <!-- Add this line -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8272689330772081"
      crossorigin="anonymous"></script>
